@@ -90,3 +90,8 @@ https://blog.csdn.net/z517602658/article/details/62076193
 1.找到java路径 whereis java
 2.找到服务进程号 ps -ef|grep "服务"
 3.通过进程号打印堆栈 在java/bin目录下执行./jstack -l pid
+
+18.编译并执行某个类
+   1.找到java安装路径 whereis java 假如是home/ct/java
+   2.执行编译：/home/ct/java/bin/javac test.java -Djava.ext.dirs=/home/ct/java/dependency/(有时需要加上-encoding UTF-8)
+   3.执行java的main方法：/home/ct/java/bin/java -cp .:1.jar:2.jar:3.jar() test(需要依赖1.jar,2.jar,3.jar)
